<resources>
    <string name="app_name">Curriculum Vitae V2</string>
    <string name="fullname">Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="skills">Skills</string>
    <string name="textview">TextView</string>
    <string name="ios">Ios</string>
    <string name="android">Android</string>
    <string name="flutter">Flutter</string>
    <string name="submit">Submit</string>
    <string name="language">Language</string>
    <string name="hobbies">Hobbies</string>
    <string name="arabic">Arabic</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="games">Games</string>
    <string name="sport">Sport</string>
    <string name="movies">Movies</string>
    <string name="emptyField">Must not be empty !</string>
    <string name="emailError">Check your email !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
